# UserIteractionProj

./: .env.sample  alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 88b469295223_initial_migration_after_reset.py
config/: db.py
models/: users.py
routers/: users.py
schemas/: users.py
services/: auth.py  email_service.py  service.py
