[tool.poetry]
name = "userinteractionproject"
version = "0.1.0"
description = ""
authors = ["serebriakovanton <cu-hawk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
pillow = "^11.0.0"
alembic = "^1.13.3"
passlib = "^1.7.4"
greenlet = "^3.1.1"
python-multipart = "^0.0.16"
bcrypt = "3.2.0"
pyjwt = "^2.9.0"
geopy = "^2.4.1"
redis = "^5.2.0"
setuptools = "^75.3.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
